[package]
name = "svm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.3"
dirs = "5.0.1"
fs_extra = "1.3.0"
futures-util = "0.3.30"
reqwest = { version = "0.11.26", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.11"
