[package]
name = "kaivm"
version = "0.3.0"
description = "KAIVM is a multiplatform Command Line Interface (CLI) designed to simplify the process of downloading, managing, configuring, and running different versions of Shinkai Node"
authors = ["Alfredo Gallardo <agallardol@outlook.com>"]
homepage = "https://github.com/agallardol/kaivm"
repository = "https://github.com/agallardol/kaivm"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "shinkai", "ai", "shinkai-node", "version-manager"]
edition = "2021"
license-file = "LICENSE"

[dependencies]
clap = "4.5.3"
dirs = "5.0.1"
fs_extra = "1.3.0"
futures-util = "0.3.30"
reqwest = { version = "0.11.26", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.11"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["fileapi", "handleapi"] }
